tweaks to composer.json and .travis.yml

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "prefer-stable": true,
     "autoload": {
         "psr-0": {
-            "": "src/"
+            "EasyBib\\Api\\Client\\": "src/",
+            "EasyBib\\Tests\\Api\\Client\\": "tests/"
         },
         "classmap": ["tests/"]
     }
