--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,21 @@
         {
             "type": "vcs",
             "url": "git@github.com:fabpot/php-cs-fixer.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:fkooman/guzzle-bearer-auth-plugin"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:yitznewton/php-oauth-client"
         }
     ],
     "require": {
         "php": ">=5.5",
-        "guzzle/guzzle": "3.8.*"
+        "guzzle/guzzle": "3.8.*",
+        "fkooman/guzzle-bearer-auth-plugin": "dev-master",
+        "fkooman/php-oauth-client": "dev-master"
     },
     "require-dev": {
       "phpunit/phpunit": ">=3.7",
