update README; change to LGPLv3 and add LICENSE file
add comment clarifying API behavior

rewrite README code example

more README clarity

change license to LGPLv3.0 to mirror php-oauth-client

add license blurb to README and add LICENSE file

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "easybib/api-client-php",
     "description": "Client for EasyBib API, implemented in PHP",
-    "license": "BSD-2-Clause",
+    "license": "LGPL-3.0",
     "authors": [
         {
             "name": "Yitzchak Schaffer",
