--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "easybib/api-client-php",
     "description": "Client for EasyBib API, implemented in PHP",
-    "license": "LGPL-3.0",
+    "license": "BSD-2-Clause",
     "authors": [
         {
             "name": "Yitzchak Schaffer",
