--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     "require": {
         "php": ">=5.5",
         "guzzle/guzzle": "3.8.*",
-        "fkooman/guzzle-bearer-auth-plugin": "0.2.*",
-        "fkooman/php-oauth-client": "dev-master"
+        "fkooman/guzzle-bearer-auth-plugin": "0.2.*"
     },
     "require-dev": {
       "phpunit/phpunit": ">=3.7",
