--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require": {
         "php": ">=5.5",
         "easybiblabs/oauth2-client-php": ">=0.3.1",
+        "doctrine/cache": "~1.3",
         "guzzle/guzzle": "3.8.*"
     },
     "require-dev": {
