--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,22 @@ before_script:
   - ./composer.phar install --dev --prefer-source --no-interaction
 
 php:
-  - 5.5
+  - 5.6
+  - 7.0
+
+matrix:
+  allow_failures:
+  - php: 7
+  fast_finish: true
 
 script:
   - ./bin/phpci
+
+cache:
+  directories:
+  - $HOME/.composer/cache/repo/
+  - $TRAVIS_BUILD_DIR/vendor/
+
+branches:
+  only:
+    - master
