--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,14 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:fabpot/PHP-CS-Fixer.git"
-        },
-        {
-            "type": "vcs",
             "url": "git@github.com:easybiblabs/oauth2-client-php.git"
         }
     ],
     "require": {
         "php": ">=5.5",
-        "easybiblabs/oauth2-client-php": ">=0.3.1",
         "doctrine/cache": "~1.3",
-        "guzzle/guzzle": "3.8.*"
+        "easybiblabs/oauth2-client-php": "^3.0.0",
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
       "phpunit/phpunit": ">=3.7",
@@ -35,8 +31,13 @@
     "autoload": {
         "psr-0": {
             "EasyBib\\Api\\Client\\": "src/",
-            "EasyBib\\Guzzle\\": "src/",
-            "EasyBib\\Tests\\Api\\Client\\": "tests/"
+            "EasyBib\\Guzzle\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-0": {
+            "EasyBib\\Tests\\Api\\Client\\": "tests/",
+            "EasyBib\\Tests\\Mocks\\": "tests/"
         },
         "classmap": ["tests/"]
     }
