--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
-      "phpunit/phpunit": ">=3.7",
-      "phpmd/phpmd": "*",
-      "fabpot/php-cs-fixer": "dev-master",
-      "squizlabs/php_codesniffer": "1.*"
+        "phpunit/phpunit": ">=3.7",
+        "phpmd/phpmd": "^2.4.3",
+        "squizlabs/php_codesniffer": "^2.6",
+        "friendsofphp/php-cs-fixer": "^1.11"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
