--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,8 @@
 language: php
 
-before_script:
-  - ./composer.phar install --dev --prefer-source --no-interaction
-
 php:
   - 5.6
   - 7.0
-
-matrix:
-  allow_failures:
-  - php: 7
-  fast_finish: true
-
-script:
-  - ./bin/phpci
 
 cache:
   directories:
@@ -23,3 +12,13 @@ cache:
 branches:
   only:
     - master
+
+matrix:
+  fast_finish: true
+  allow_failures:
+  - php: 7
+  include:
+  - stage: test
+    env: JOB=test
+    install: make install
+    script: make ci
