--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: php
-
-php:
-  - 5.6
-  - 7.0
+php: 5.6
 
 cache:
   directories:
@@ -16,9 +13,14 @@ branches:
 matrix:
   fast_finish: true
   allow_failures:
-  - php: 7
+  - php: 7.2
   include:
   - stage: test
+    env: JOB=test
+    install: make install
+    script: make ci
+  - stage: test
+    php: 7.2
     env: JOB=test
     install: make install
     script: make ci
